--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
 <body ng-app="Client">
 
 <div ng-view></div>
-{{Hello}}
+{{"Hello"}}
 <script type="text/javascript" src="components/angular.min.js"></script>
 <script type="text/javascript" src="components/angular-resource.min.js"></script>
 <script type="text/javascript" src="components/angular-route.min.js"></script>
 	
 <script type="text/javascript" src="scripts/router.js"></script>
+<script type="text/javascript" src="scripts/controllers/note.js"></script>
 
 <script type="text/javascript" src="assets/js/jquery-3.1.0.min.js"></script>
 <script type="text/javascript" src="assets/js/materialize.min.js"></script>	
