--- a/index.html
+++ b/index.html
@@ -3,18 +3,19 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Api Application</title>
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="assets/css/materialize.min.css">
 </head>
 <body ng-app="Client">
 
 <div ng-view></div>
-{{"Hello"}}
 <script type="text/javascript" src="components/angular.min.js"></script>
 <script type="text/javascript" src="components/angular-resource.min.js"></script>
 <script type="text/javascript" src="components/angular-route.min.js"></script>
 	
 <script type="text/javascript" src="scripts/router.js"></script>
 <script type="text/javascript" src="scripts/controllers/note.js"></script>
+<script type="text/javascript" src="scripts/services/NoteServices.js"></script>
 
 <script type="text/javascript" src="assets/js/jquery-3.1.0.min.js"></script>
 <script type="text/javascript" src="assets/js/materialize.min.js"></script>	
